--- a/apps/nx-northwind-app/src/app/app.component.html
+++ b/apps/nx-northwind-app/src/app/app.component.html
@@ -1,4 +1,85 @@
-<a href="#" [routerLink]="['/category']" routerLinkActive="router-link-active">Category</a> |
-<a href="#" [routerLink]="['/customer']" routerLinkActive="router-link-active">Customer</a>
+<a
+  href="#"
+  [routerLink]="['/category']"
+  routerLinkActive="router-link-active"
+  >Category</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/customer']"
+  routerLinkActive="router-link-active"
+  >Customer</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/employee']"
+  routerLinkActive="router-link-active"
+  >Employee</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/employee-territory']"
+  routerLinkActive="router-link-active"
+  >Employee-Territory</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/order']"
+  routerLinkActive="router-link-active"
+  >Order</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/order-detail']"
+  routerLinkActive="router-link-active"
+  >Order-Detail</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/product']"
+  routerLinkActive="router-link-active"
+  >Product</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/region']"
+  routerLinkActive="router-link-active"
+  >Region</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/shipper']"
+  routerLinkActive="router-link-active"
+  >Shipper</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/supplier']"
+  routerLinkActive="router-link-active"
+  >Supplier</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/territory']"
+  routerLinkActive="router-link-active"
+  >Territory</a
+>
+|
+<a
+  href="#"
+  [routerLink]="['/user']"
+  routerLinkActive="router-link-active"
+  >User</a
+>
 
 <router-outlet></router-outlet>
