--- a/libs/nx-northwind-app/featured/category/src/lib/category-loader/category-loader.component.html
+++ b/libs/nx-northwind-app/featured/category/src/lib/category-loader/category-loader.component.html
@@ -1,1 +1,79 @@
-<h1>category-loader works!</h1>
+<nx-northwind-base-loader
+  title="Categories"
+  [model$]="categoryModel"
+  [error]="error$"
+  [fnButtons]="fnButtons$">
+  <form #frm="ngForm" (change)="formStatus(frm)">
+    <table *ngIf="categoryModel">
+      <tbody>
+        <tr>
+          <th nowrap>Category ID</th>
+          <td>
+            <input
+              type="text"
+              id="categoryID"
+              name="categoryID"
+              [(ngModel)]="categoryModel.CategoryID"
+              disabled />
+          </td>
+        </tr>
+        <tr>
+          <th nowrap>Category Name *</th>
+          <td>
+            <input
+              type="text"
+              id="categoryName"
+              name="categoryName"
+              [(ngModel)]="categoryModel.CategoryName"
+              required
+              maxlength="15" />
+          </td>
+        </tr>
+        <tr>
+          <th nowrap>Description</th>
+          <td>
+            <textarea
+              rows="10"
+              cols="50"
+              id="description"
+              name="description"
+              [(ngModel)]="categoryModel.Description"></textarea>
+          </td>
+        </tr>
+        <tr *ngIf="categoryModel.CategoryID !== '0'">
+          <th nowrap>Created By</th>
+          <td>
+            <input
+              type="text"
+              id="createdBy"
+              name="createdBy"
+              [(ngModel)]="categoryModel.CreatedBy"
+              disabled />
+          </td>
+        </tr>
+        <tr *ngIf="categoryModel.CategoryID !== '0'">
+          <th nowrap>Created At</th>
+          <td>
+            <input
+              type="date"
+              id="createdAt"
+              name="createdAt"
+              [(ngModel)]="categoryModel.CreatedAt"
+              disabled />
+          </td>
+        </tr>
+        <tr *ngIf="categoryModel.CategoryID !== '0'">
+          <th nowrap>Updated At</th>
+          <td>
+            <input
+              type="date"
+              id="updatedAt"
+              name="updatedAt"
+              [(ngModel)]="categoryModel.UpdatedAt"
+              disabled />
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </form>
+</nx-northwind-base-loader>
