--- a/libs/nx-northwind-app/featured/category/src/lib/category-browser/category-browser.component.html
+++ b/libs/nx-northwind-app/featured/category/src/lib/category-browser/category-browser.component.html
@@ -1,5 +1,5 @@
 <nx-northwind-base-browser
-  title="Categories"
+  [title]="'Categories'"
   [model$]="categories$"
   [error]="error$"
   [fnButtons]="fnButtons$"
