--- a/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.scss
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.scss
@@ -1,24 +1,18 @@
 pre {
-  background-color: rgb(243, 243, 243);
   padding: 5px;
-  margin-top: 55px;
+  width: 99%;
   height: 200px;
   overflow: auto;
+  font-size: 0.8em;
+  box-shadow: 2px 2px 5px 0px #cdcdcd;
 }
 
-.function-buttons {
-  float: right;
-  margin: 5px;
-}
-
-.function-buttons button {
-  font-family: arial, sans-serif;
-  padding: 3px;
-  margin: 1px;
+.function-buttons .btns {
+  margin: 2px;
 }
 
 table {
-  font-family: arial, sans-serif;
+  margin-top: 120px;
   border-collapse: collapse;
   width: 100%;
 }
