--- a/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <p *ngIf="errorMessage">{{ errorMessage }}</p>
+  <!-- <p *ngIf="errorMessage">{{ errorMessage }}</p> -->
 
   <br />
   <br />
