--- a/libs/nx-northwind-app/featured/shared/src/lib/base-loader/base-loader.component.scss
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-loader/base-loader.component.scss
@@ -1,43 +1,14 @@
 pre {
-  background-color: rgb(243, 243, 243);
   padding: 5px;
-  margin-top: 55px;
+  width: 99%;
   height: 200px;
   overflow: auto;
   font-size: 0.8em;
+  box-shadow: 2px 2px 5px 0px #cdcdcd;
 }
 
-.function-buttons {
-  float: right;
-  margin: 5px;
+.function-buttons .btns {
+  margin: 2px;
 }
 
-.function-buttons button {
-  font-family: arial, sans-serif;
-  padding: 3px;
-  margin: 1px;
-}
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 50%;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-th {
-  background-color: #bdbdbd;
-  text-align: right;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  padding: 8px;
-}
-
-textarea {
-  resize: none;
-}
