--- a/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.scss
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.scss
@@ -7,9 +7,9 @@ pre {
   box-shadow: 2px 2px 5px 0px #cdcdcd;
 }
 
-.function-buttons .btns {
-  margin: 2px;
-}
+// .function-buttons .btns {
+//   margin: 2px;
+// }
 
 table {
   margin-top: 120px;
