--- a/libs/nx-northwind-app/featured/shared/src/lib/base-loader/base-loader.component.scss
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-loader/base-loader.component.scss
@@ -7,8 +7,8 @@ pre {
   box-shadow: 2px 2px 5px 0px #cdcdcd;
 }
 
-.function-buttons .btns {
-  margin: 2px;
-}
+//.function-buttons .btns {
+//  margin: 1px;
+//}
 
 
