--- a/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.html
+++ b/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.html
@@ -1,1 +1,107 @@
-<p>dashboard-browser works!</p>
+<h3>Sales</h3>
+<hr />
+<ul class="chart-grid">
+  <li class="charts mat-elevation-z4" [style]="{ width: '100%' }">
+    <canvasjs-chart
+      [options]="chartOptionsSalesTotalPerYear"
+      (chartInstance)="getChartInstanceSalesTotalPerYear($event)"
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsSalesTotalAmountPerYear"
+      (chartInstance)="
+        getChartInstanceSalesTotalAmountPerYear($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsCustomersCountPerYear"
+      (chartInstance)="getChartInstanceCustomersCountPerYear($event)"
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+</ul>
+
+<h3>Customers</h3>
+<hr />
+<ul class="chart-grid">
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsCustomersCountOrdersPerYearFirst"
+      (chartInstance)="
+        getChartInstanceCustomersCountOrdersPerYearFirst($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsCustomersCountOrdersPerYearSecond"
+      (chartInstance)="
+        getChartInstanceCustomersCountOrdersPerYearSecond($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsCustomersCountOrdersPerYearThird"
+      (chartInstance)="
+        getChartInstanceCustomersCountOrdersPerYearThird($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+</ul>
+
+<h3>Employees</h3>
+<hr />
+<ul class="chart-grid">
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsEmployeesTotalperYearFirst"
+      (chartInstance)="
+        getChartInstanceemployeesTotalperYearFirst($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsEmployeesTotalperYearSecond"
+      (chartInstance)="
+        getChartInstanceemployeesTotalperYearSecond($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+  <li
+    class="charts mat-elevation-z4"
+    [style]="{ width: '100%', height: '300px' }">
+    <canvasjs-chart
+      [options]="chartOptionsEmployeesTotalperYearThird"
+      (chartInstance)="
+        getChartInstanceemployeesTotalperYearThird($event)
+      "
+      [styles]="{ width: '100%', height: '300px' }">
+    </canvasjs-chart>
+  </li>
+</ul>
