--- a/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.html
+++ b/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.html
@@ -1,7 +1,14 @@
 <h3>Sales</h3>
 <hr />
+
 <ul class="chart-grid">
   <li class="charts mat-elevation-z4" [style]="{ width: '100%' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingA"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsSalesTotalPerYear"
       (chartInstance)="getChartInstanceSalesTotalPerYear($event)"
@@ -11,6 +18,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingB"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsSalesTotalAmountPerYear"
       (chartInstance)="
@@ -22,6 +35,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingC"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsCustomersCountPerYear"
       (chartInstance)="getChartInstanceCustomersCountPerYear($event)"
@@ -36,6 +55,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingD"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsCustomersCountOrdersPerYearFirst"
       (chartInstance)="
@@ -47,6 +72,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingE"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsCustomersCountOrdersPerYearSecond"
       (chartInstance)="
@@ -58,6 +89,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingF"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsCustomersCountOrdersPerYearThird"
       (chartInstance)="
@@ -74,6 +111,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingG"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsEmployeesTotalperYearFirst"
       (chartInstance)="
@@ -85,6 +128,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingH"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsEmployeesTotalperYearSecond"
       (chartInstance)="
@@ -96,6 +145,12 @@
   <li
     class="charts mat-elevation-z4"
     [style]="{ width: '100%', height: '300px' }">
+    <nx-northwind-mt-spinner
+      *ngIf="isLoadingI"
+      class="chartSpin"
+      [strokeWidth]="4"
+      [diameter]="50">
+    </nx-northwind-mt-spinner>
     <canvasjs-chart
       [options]="chartOptionsEmployeesTotalperYearThird"
       (chartInstance)="
