--- a/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.scss
+++ b/libs/nx-northwind-app/featured/dashboard/src/lib/dashboard-browser/dashboard-browser.component.scss
@@ -16,6 +16,19 @@ h3 {
   margin: 10px;
   margin-bottom: 16px;
   margin-left: 7px;
+  position: relative;
+}
+
+.chartSpin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 @media only screen and (max-width: 1050px) {
