prepare order master details

--- a/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
@@ -37,6 +37,8 @@
     [displayedColumns]="this.headers"
     [dataSource]="modelData"
     [length]="modelData.length"
-    [isSelectable]="isSelectable">
+    [isSelectable]="isSelectable"
+    (selectedRecordSubj)="getSelectRecord($event)"
+    >
   </nx-northwind-mt-table>
 </ng-container>
