--- a/libs/nx-northwind-app/featured/shared/src/lib/base-master-detail-browser/base-master-detail-browser.component.scss
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-master-detail-browser/base-master-detail-browser.component.scss
@@ -7,6 +7,10 @@ pre {
   box-shadow: 2px 2px 5px 0px #cdcdcd;
 }
 
+h3 {
+  color: #868686;
+}
+
 // .function-buttons .btns {
 //   margin: 2px;
 // }
