--- a/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
+++ b/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
@@ -1,1 +1,271 @@
-<p>order-master-detail-loader works!</p>
+<nx-northwind-base-master-detail-loader
+  [title]="'Order Detail'"
+  [model$]="orderModel"
+  [modelDetails$]="orderDetailModel"
+  [error]="error$"
+  [fnButtons]="fnButtons$"
+  [isLoaded]="loaded">
+  <form
+    #orderDetailForm
+    #frm="ngForm"
+    [formGroup]="formGroup"
+    (change)="onFormChange(frm)"
+    (ngSubmit)="onFormSubmit($event)"
+    class="mat-elevation-z4">
+    <div class="formContainer" *ngIf="orderModel">
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="OrderID"
+        name="OrderID"
+        formControlName="OrderID"
+        [(ngModel)]="orderModel.OrderID"
+        [isClosable]="false"
+        [label]="'Order ID'"
+        [placeHolder]="'Enter the order id'"
+        [disabled]="true"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="CustomerID"
+        name="CustomerID"
+        formControlName="CustomerID"
+        [(ngModel)]="orderModel.CustomerID"
+        [isClosable]="false"
+        [label]="'Customer ID'"
+        [placeHolder]="'Enter the customer id'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="EmployeeID"
+        name="EmployeeID"
+        formControlName="EmployeeID"
+        [(ngModel)]="orderModel.EmployeeID"
+        [isClosable]="false"
+        [label]="'Employee ID'"
+        [placeHolder]="'Enter the employee id'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="OrderDate"
+        name="OrderDate"
+        formControlName="OrderDate"
+        [(ngModel)]="orderModel.OrderDate"
+        [isClosable]="false"
+        [label]="'Order Date'"
+        [placeHolder]="'Enter the order date'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+    </div>
+    <div class="formContainer" *ngIf="orderModel">
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="RequiredDate"
+        name="RequiredDate"
+        formControlName="RequiredDate"
+        [(ngModel)]="orderModel.RequiredDate"
+        [isClosable]="false"
+        [label]="'Required Date'"
+        [placeHolder]="'Enter the required date'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShippedDate"
+        name="ShippedDate"
+        formControlName="ShippedDate"
+        [(ngModel)]="orderModel.ShippedDate"
+        [isClosable]="false"
+        [label]="'Shipped Date'"
+        [placeHolder]="'Enter the shipped date'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipVia"
+        name="ShipVia"
+        formControlName="ShipVia"
+        [(ngModel)]="orderModel.ShipVia"
+        [isClosable]="false"
+        [label]="'ShipVia'"
+        [placeHolder]="'Enter the shipvia'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="Freight"
+        name="Freight"
+        formControlName="Freight"
+        [(ngModel)]="orderModel.Freight"
+        [isClosable]="false"
+        [label]="'Freight'"
+        [placeHolder]="'Enter the freight'"
+        [disabled]="false"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+    </div>
+    <div class="formContainer" *ngIf="orderModel">
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipName"
+        name="ShipName"
+        formControlName="ShipName"
+        [(ngModel)]="orderModel.ShipName"
+        [isClosable]="false"
+        [label]="'ShipName'"
+        [placeHolder]="'Enter the ship name'"
+        [disabled]="false"
+        maxlength="40"
+        [required]="false">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipAddress"
+        name="ShipAddress"
+        formControlName="ShipAddress"
+        [(ngModel)]="orderModel.ShipAddress"
+        [isClosable]="false"
+        [label]="'Ship Address'"
+        [placeHolder]="'Enter the ship address'"
+        [disabled]="false"
+        maxlength="60"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipCity"
+        name="ShipCity"
+        formControlName="ShipCity"
+        [(ngModel)]="orderModel.ShipCity"
+        [isClosable]="false"
+        [label]="'Ship City'"
+        [placeHolder]="'Enter the ship city'"
+        [disabled]="false"
+        maxlength="15"
+        [required]="true">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipRegion"
+        name="ShipRegion"
+        formControlName="ShipRegion"
+        [(ngModel)]="orderModel.ShipRegion"
+        [isClosable]="false"
+        [label]="'Ship Region'"
+        [placeHolder]="'Enter the ship region'"
+        [disabled]="false"
+        maxlength="15">
+      </nx-northwind-mt-input-text>
+    </div>
+    <div class="formContainer" *ngIf="orderModel">
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipPostalCode"
+        name="ShipPostalCode"
+        formControlName="ShipPostalCode"
+        [(ngModel)]="orderModel.ShipPostalCode"
+        [isClosable]="false"
+        [label]="'Ship Postal Code'"
+        [placeHolder]="'Enter the ship postal code'"
+        [disabled]="false"
+        maxlength="10">
+      </nx-northwind-mt-input-text>
+
+      <nx-northwind-mt-input-text
+        class="mat-form-field"
+        id="ShipCountry"
+        name="ShipCountry"
+        formControlName="ShipCountry"
+        [(ngModel)]="orderModel.ShipCountry"
+        [isClosable]="false"
+        [label]="'ShipCountry'"
+        [placeHolder]="'Enter the ship country'"
+        [disabled]="false"
+        maxlength="15">
+      </nx-northwind-mt-input-text>
+    </div>
+
+    <br />
+    <h3>Order Details</h3>
+    <hr />
+    <br />
+
+    <div *ngIf="orderDetailModel" formArrayName="orderDetails">
+      <div
+        *ngFor="
+          let item of frmGetOrderDetails.controls;
+          let i = index
+        ">
+        <div class="formContainer" [formGroupName]="i">
+          <nx-northwind-mt-input-text
+            class="mat-form-field"
+            id="ProductID"
+            name="ProductID"
+            formControlName="ProductID"
+            [(ngModel)]="orderDetailModel[i].ProductID"
+            [isClosable]="false"
+            [label]="'Product ID'"
+            [placeHolder]="'Enter the product id'"
+            [required]="true">
+          </nx-northwind-mt-input-text>
+
+          <nx-northwind-mt-input-text
+            class="mat-form-field"
+            id="UnitPrice"
+            name="UnitPrice"
+            formControlName="UnitPrice"
+            [(ngModel)]="orderDetailModel[i].UnitPrice"
+            [isClosable]="false"
+            [label]="'UnitPrice'"
+            [placeHolder]="'Enter the unit price'"
+            [required]="true">
+          </nx-northwind-mt-input-text>
+
+          <nx-northwind-mt-input-text
+            class="mat-form-field"
+            id="Quantity"
+            name="Quantity"
+            formControlName="Quantity"
+            [(ngModel)]="orderDetailModel[i].Quantity"
+            [isClosable]="false"
+            [label]="'Quantity'"
+            [placeHolder]="'Enter the quantity'"
+            [required]="true">
+          </nx-northwind-mt-input-text>
+
+          <nx-northwind-mt-input-text
+            class="mat-form-field"
+            id="Discount"
+            name="Discount"
+            formControlName="Discount"
+            [(ngModel)]="orderDetailModel[i].Discount"
+            [isClosable]="false"
+            [label]="'Discount'"
+            [placeHolder]="'Enter the discount'"
+            [required]="true">
+          </nx-northwind-mt-input-text>
+        </div>
+      </div>
+    </div>
+  </form>
+</nx-northwind-base-master-detail-loader>
+
+<pre>Status: {{ formGroup.status | json }}</pre>
+<pre>Valid: {{ formGroup.valid | json }}</pre>
